# PixelAnnotationTool

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.b8172ce  README.md  icon.rc  pixel_annotation_tool_version.h.in
cmake/modules/: FindTensorFlow.cmake
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pixelann.cron.d.ex  pixelann.default.ex  pixelann.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
install/: MIT.lic  setup_script.nsi
src/: about_dialog.cpp  about_dialog.h  development.json  development_russian.json  golf.json  heart.json  image_canvas.cpp  image_canvas.h  image_mask.cpp  image_mask.h  label_widget.cpp  labels.cpp  labels.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  resources.qrc  rus.qm  utils.cpp
src/tfwrapper/: cnpy.h  tensorflow_classifier.cpp  tensorflow_classifier.hpp  tensorflow_cnn_inferencer.cpp  tensorflow_cnn_inferencer.hpp  tensorflow_detector.cpp  tensorflow_detector.hpp  tensorflow_inferencer.cpp  tensorflow_inferencer.hpp  tensorflow_maskrcnn_inferencer.cpp  tensorflow_maskrcnn_inferencer.h  tensorflow_segmentator.cpp  tensorflow_segmentator.hpp  tensorflow_utils.cpp  tensorflow_utils.hpp
